syntax = "proto3";

/** used when fwd client */
enum SenderType {
  kContent = 0;
  kUser = 1;
}
